examples/neg/high_loop_no_grow/alice.oio
ALICE

network channel BOB/B2@{H} : int@{H};
local channel STDOUT: int@{H};

A2@{H} (secret : int@{H}) {
    output(STDOUT, secret);
    send(BOB/B2, secret+1);
}
